# release-workflow-demo

./: pyproject.toml  test.py  update-poetry-version.sh
.github/workflows/: cicd.yaml  release.yaml
